# rectangular-surface-parameterization

./: .gitignore  BUG_REPORT.md  CLAUDE.md  CormanCrane.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  ISSUE_10_FLIPS.md  LICENSE  MATLAB_CONVERSION.md  PLAN_PHASE2.md  PLAN_PHASE3_QUAD_EXTRACTION.md  PLAN_UV_FIXES.md  PROMPT_PHASE3_IMPLEMENTATION.md  README.md  USAGE.md  agents.md  analyze_flips.py  bug-report.md  check_pruning.py  check_zeta.py  compare_cuts.py  compute_k21.py  convert_matlab.py  corman_crane.py  cross_field.py  cut_graph.py  cut_graph_matlab.py  debug_constraints.py  debug_cross_field.py  debug_k21.py  debug_k21_signs.py  debug_lscm.py  debug_parallel_transport.py  debug_parallel_transport_v2.py  debug_parallel_transport_v3.py  debug_parallel_transport_v4.py  debug_parallel_transport_v5.py  debug_parallel_transport_v6.py  diagnose_cut_topology.py  diagnose_flips.py  (+32 more)
ComputeParam/: cut_mesh.py  cut_mesh_with_python.py  matrix_vector_multiplication.py  mesh_to_disk_seamless.py  parametrization_from_scales.py
FrameField/: __init__.py  brush_frame_field.py  compute_curvature_cross_field.py  compute_face_cross_field.py  plot_frame_field.py  trivial_connection.py
Mesh/: README.md
Orthotropic/: findings.md  objective_ortho_param.py  omega_from_scale.py  optimization_params.py  optimize_RSP.py  oracle_integrability_condition.py  reduce_corner_var_2d.py  reduce_corner_var_2d_cut.py  reduction_from_ff2d.py
Preprocess/: MeshInfo.py  connectivity.py  dec_tri.py  find_graph_generator.py  gaussian_curvature.py  preprocess_ortho_param.py  sort_triangles.py  sort_triangles_comp.py
Utils/: extract_scale_from_param.py  libqex_wrapper.py  preprocess_mesh.py  readOBJ.py  save_param.py  vec.py  verify_pipeline.py  visualize_uv.py  writeObj.py
docs/: algo_integer_grid_maps.md  cross-field-explained.md  cross-fields-explained-from-repo.md  libqex_setup.md  matlab_cutgraph_analysis.md  mesh-quality-investigation.md  octave-validation-report.md  qex_python_port_plan.md  robustness-improvements.md
rectangular_surface_parameterization/: __init__.py  cli.py
scratch/: email-to-authors.md  show_sphere_quads.py
scripts/: benchmark_quad_quality.py  benchmark_quantization.py  build_libqex.bat  build_libqex.ps1  compare_octave.py  install_pyqex.py  install_pyquantization.py  migrate_all.py  migrate_module.py  rename_attribute.py  rename_connectivity_fields.py  rename_mesh_T.py  (+3 more)
(+97 files in other folders)
